<?xml version="1.0"?>
<package format="2">
  <name>kcf_catkin</name>
  <version>0.0.1</version>
  <description>The KCF tracker</description>

  <maintainer email="crandrei@ethz.ch">Andrei Cramariuc</maintainer>
  <author email="crandrei@ethz.ch">Andrei Cramariuc</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>opencv3_catkin</depend>
</package>
